feat: added authorities api specification